<resources>
    <string name="splash_screen_logo">Splash Screen logo</string>
    <string name="cityCountry">City, Country</string>
    <string name="refreshButtonText">Refresh</string>
    <string name="countryNameInput">Enter country name…</string>
    <string name="countryLabelText">Country:</string>
    <string name="cityNameInput">Enter city name…</string>
    <string name="cityLabelText">City:</string>
    <string name="windLabelText">Wind:</string>
    <string name="humidityLabelText">Humidity:</string>
    <string name="pressureLabelText">Pressure:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mainScreenCityCountry">Zagreb, Croatia</string>
    <string name="forecastScreenCityCountry">Zagreb, Croatia</string>
    <string name="testText">TestText</string>
    <string name="cityToSearch">City to search:</string>
    <string name="appName">Sunbeam</string>
    <string name="mainScreenTitle">Main Screen</string>
    <string name="weekForecastScreenTitle">Week Forecast</string>
    <string name="forecast48ScreenTitle">48h Forecast</string>
    <string name="searchScreenTitle">Search</string>
    <string name="settingsScreenTitle">Settings</string>
    <string name="settingsNavigation">Navigation</string>
    <string name="settingsNavigationMainColorTitle">Set main navigation color</string>
    <string name="settingsNavigationMainColorSummary">Choose a color from color picker</string>
    <string name="settingsNavigationIconColorTitle">Set navigation icon color</string>
    <string name="settingsNavigationIconColorSummary">Choose a color from color picker</string>
    <string name="settingsNavigationTextColorTitle">Set navigation text color</string>
    <string name="settingsNavigationTextColorSummary">Choose a color from color picker</string>
    <string name="settingsGeneral">General</string>
    <string name="settingsPrimaryColorSummary">Choose a color from color picker</string>
    <string name="settingsPrimaryColorTitle">Set primary app color</string>
    <string name="settingsPrimaryDarkColorSummary">Choose a color from color picker</string>
    <string name="settingsPrimaryDarkColorTitle">Set primary dark app color</string>
    <string name="settingsAccentColorSummary">Choose a color from color picker</string>
    <string name="settingsAccentColorTitle">Set accent app color</string>
    <string name="settingsDarkModeSummary">Enable or disable dark mode</string>
    <string name="settingsDarkModeTitle">Dark mode</string>
    <string name="settingsToolbarSummary">Enable or disable app toolbar</string>
    <string name="settingsToolbarTitle">Toolbar</string>
    <string name="settingsNavigationTypeDisabled">Using bottom navigation</string>
    <string name="settingsNavigationTypeEnabled">Using navigation drawer (default)</string>
    <string name="settingsNavigationTypeTitle">Use drawer navigation (default)</string>
    <string-array name="availableSearchCities">
        <item>Amsterdam</item>
        <item>Andorra la Vella</item>
        <item>Ankara</item>
        <item>Athens</item>
        <item>Berlin</item>
        <item>Bern</item>
        <item>Bratislava</item>
        <item>City of Brussels</item>
        <item>Bucharest</item>
        <item>Budapest</item>
        <item>Chisinau</item>
        <item>Copenhagen</item>
        <item>Dublin</item>
        <item>Gibraltar</item>
        <item>Helsinki</item>
        <item>Kiev</item>
        <item>Lisbon</item>
        <item>Ljubljana</item>
        <item>London</item>
        <item>Luxembourg City</item>
        <item>Madrid</item>
        <item>Minsk</item>
        <item>Monaco</item>
        <item>Moscow</item>
        <item>Nicosia</item>
        <item>Nuuk</item>
        <item>Oslo</item>
        <item>Paris</item>
        <item>Podgorica</item>
        <item>Prague</item>
        <item>Pristina</item>
        <item>Reykjavik</item>
        <item>Riga</item>
        <item>Rome</item>
        <item>City of San Marino</item>
        <item>Sarajevo</item>
        <item>Skopje</item>
        <item>Sofia</item>
        <item>Stockholm</item>
        <item>Sukhumi</item>
        <item>Tallinn</item>
        <item>Tbilisi</item>
        <item>Tirana</item>
        <item>Vaduz</item>
        <item>Valletta</item>
        <item>Vienna</item>
        <item>Vilnius</item>
        <item>Warsaw</item>
        <item>Zagreb</item>
    </string-array>
</resources>